[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Menus/buttons.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/background-music.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/fonts/VPPixel-Simplified.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/themes/main_brown_theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 142
outline_size = 4
outline_color = Color( 0.121569, 0.121569, 0.121569, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Control" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="GAMEOVER" type="Label" parent="."]
margin_left = 224.0
margin_top = 72.0
margin_right = 798.0
margin_bottom = 281.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.835294, 0.74902, 0.654902, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "YOU DIED"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.469
anchor_top = 0.573
anchor_right = 0.469
anchor_bottom = 0.573
margin_left = -48.256
margin_top = -23.8
margin_right = 115.744
margin_bottom = 281.2
theme = ExtResource( 4 )
custom_constants/separation = 10

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 49.0
theme = ExtResource( 4 )
text = "Restart"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 164.0
margin_bottom = 108.0
theme = ExtResource( 4 )
text = "Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 164.0
margin_bottom = 167.0
theme = ExtResource( 4 )
text = "Quit"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 1.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
